--- a/eda.ipynb
+++ b/eda.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "# Data Processing"
+    "# Exploratory Data Analysis (EDA)"
    ],
    "cell_type": "markdown",
    "metadata": {}
