--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -506,13 +506,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "## Making Predictions with the New Ratings"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -603,7 +601,7 @@
     }
    ],
    "source": [
-    "# return the top n recommendations using the \n",
+    "# return the top n recommendations\n",
     "def recommended_movies(user_ratings,movie_title_df,n):\n",
     "        for idx, rec in enumerate(user_ratings):\n",
     "            title = movie_title_df.loc[movie_title_df['movieId'] == int(rec[0])]['title']\n",
@@ -614,13 +612,6 @@
     "            \n",
     "recommended_movies(ranked_movies,df_movies,5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
