--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -72,10 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the movielens-100k datase\n",
-    "\n",
-    "# data = Dataset.load_builtin('ml-100k')\n",
-    "df = pd.read_csv('./data/ratings.csv')"
+    "# loading in data\n",
+    "df = pd.read_csv('./data/ratings.csv')\n",
+    "# data = Dataset.load_builtin('ml-100k')"
    ]
   },
   {
@@ -589,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +600,7 @@
     }
    ],
    "source": [
-    "# return the top n recommendations\n",
+    "# return the top n recommendation\n",
     "def recommended_movies(user_ratings,movie_title_df,n):\n",
     "        for idx, rec in enumerate(user_ratings):\n",
     "            title = movie_title_df.loc[movie_title_df['movieId'] == int(rec[0])]['title']\n",
