--- a/eda.ipynb
+++ b/eda.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "source": [
-    "## Data Cleaning"
+    "## EDA"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -237,55 +237,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "source": [
-    "## Exploratory Data Analysis (EDA)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "source": [
-    "## Pickling Cleaned Data"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   }
  ]
 }
